Implementacion de las notificaciones V1

--- a/static/css/sigpae.css
+++ b/static/css/sigpae.css
@@ -15,6 +15,13 @@ body {
   padding: 0;
 }
 
+a,
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none !important;
+}
+
 /* HEADER Y NAVBAR */
 
 .header_home img {
