--- a/views/transcriptions/following.html
+++ b/views/transcriptions/following.html
@@ -62,7 +62,9 @@
             <center> <h4 class="modal-title">Reasignar Trascripción </h4> </center>
         </div>
         <div class="modal-body">
-            <center> Seleccione un nuevo Transcriptor al cual se le reasignará la Transcripción.
+            <center>
+              <p> Seleccione un nuevo Transcriptor al cual se le reasignará la Transcripción. </br>
+                  Puede agregar también un comentario adicional para el nuevo Transcriptor. </p>
               {{=formulario_reasignar}}
             </center>
             <br>
