Terminada Bitacora de la Transcripcion.

--- a/views/transcriptions/following.html
+++ b/views/transcriptions/following.html
@@ -12,6 +12,7 @@
  <table id="list-transcriptions" class="table table-striped">
    <thead>
      <tr>
+       <th>Bitácora</th>
        <th>ID</th>
        <th>Responsable</th>
        <th>Código</th>
@@ -24,6 +25,7 @@
    <tbody>
      {{for trans in transcripciones:}}
        <tr>
+         <td><a href="{{=URL(c='transcriptions',f='journal',args=[trans['id']])}}"><i class="fa fa-book" aria-hidden="true"></i></a></td>
          <td>{{=trans['id']}}</td>
          <td>{{=trans['transcriptor']}}</td>
          <td>{{=trans['codigo']}}</td>
@@ -151,6 +153,7 @@
                 }
             },
              "columns": [
+                { "orderable": false },
                 null,
                 null,
                 null,
