--- a/views/transcriptions/list_sent.html
+++ b/views/transcriptions/list_sent.html
@@ -12,6 +12,7 @@
  <table id="list-transcriptions" class="table table-striped">
    <thead>
      <tr>
+       <th>Bitácora</th>
        <th>ID</th>
        <th>Código</th>
        <th>Fecha Elaboración</th>
@@ -22,11 +23,12 @@
    <tbody>
      {{for trans in transcripciones:}}
        <tr>
+         <td><a href="{{=URL(c='transcriptions',f='journal',args=[trans['id']])}}"><i class="fa fa-book" aria-hidden="true"></i></a></td>
          <td>{{=trans['id']}}</td>
          <td>{{=trans['codigo']}}</td>
          <td>{{=trans['fecha_elaboracion']}}</td>
          <td>{{=trans['fecha_modificacion']}}</td>
-         <td><a href="{{=URL(c='transcriptions',f='view',vars=dict(id=trans['id']))}}"<i class="fa fa-eye blue" aria-hidden="true"></i></td>
+         <td><a href="{{=URL(c='transcriptions',f='view',vars=dict(id=trans['id']))}}"<i class="fa fa-eye blue" aria-hidden="true"></i></a></td>
        </tr>
       {{pass}}
    </tbody>
@@ -63,6 +65,7 @@
                 }
             },
              "columns": [
+                { "orderable": false },
                 null,
                 null,
                 null,
