--- a/views/transcriptions/journal.html
+++ b/views/transcriptions/journal.html
@@ -28,8 +28,13 @@
       {{pass}}
    </tbody>
  </table>
- </div>
 </div>
+
+<a href="{{=URL(c='transcriptions', f='download_journal', args=[transid])}}">
+  <button type="button" class="btn btn-primary bottom-right-buttom">
+    <i class="fa fa-download" aria-hidden="true"></i> Descargar Bitácora
+  </button>
+</a>
 
 <script type="text/javascript">
 
