--- a/views/administration/log.html
+++ b/views/administration/log.html
@@ -5,6 +5,15 @@
 <h2> {{=message}}</h2>
 {{pass}}
 
+<div class="row">
+  <button type="button"
+          class="btn btn-primary bottom-right-buttom"
+          data-toggle="modal"
+          data-target="#modalDescargarRegistros">
+          <i class="fa fa-download" aria-hidden="true"></i> Descargar Bitácora
+  </button>
+</div>
+
 <div class="table-responsive">
  <table id="list-registers" class="table table-striped">
    <thead>
@@ -29,6 +38,22 @@
    </tbody>
  </table>
  </div>
+
+<!-- Modal Descargar-->
+<div id="modalDescargarRegistros" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <center><h4 class="modal-title">Párametros de Descarga</h4><center>
+      </div>
+      <div class="modal-body">
+        <center><p>Por favor seleccione desde cuándo desea descargar los registros: </p></center>
+        {{=formulario}}
+      </div>
+    </div>
+  </div>
 </div>
 
 <script type="text/javascript">
