--- a/views/users/manage.html
+++ b/views/users/manage.html
@@ -14,6 +14,7 @@
        <th>Nombre</th>
        <th>Rol</th>
        <th>Email</th>
+       <th>Contactar</th>
        <th>Modificar</th>
      </tr>
    </thead>
@@ -25,6 +26,13 @@
          <td>{{=usuario['name']}}</td>
          <td>{{=usuario['roles']}}</td>
          <td>{{=usuario['email']}}</td>
+         <td>
+            <a data-toggle="modal"
+               data-target="#modalContactarUsuario"
+               data-id="{{=usuario['id']}}">
+               <i class="fa fa-envelope blue" aria-hidden="true"></i>
+            </a>
+         </td>
          <td><a href="{{=URL(c='users',f='edit',args=[usuario['id']])}}"<i class="fa fa-pencil-square-o blue" aria-hidden="true"></i></td>
        </tr>
       {{pass}}
@@ -33,7 +41,34 @@
  </div>
 </div>
 
+<!-- Modal Contactar-->
+<div id="modalContactarUsuario" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <center><h4 class="modal-title">Contactar Transcriptor</h4><center>
+      </div>
+      <div class="modal-body">
+          <center>
+              <p>  {{=formulario_contactar}}</p>
+          </center>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script>
+
+  // Pasamos los argumentos para contactar el usuario
+  $('#modalContactarUsuario').on('show.bs.modal', function(e){
+      var id = $(e.relatedTarget).data('id');
+      $(e.currentTarget).find('input[name="userid"]').val(id);
+      $("#no_table_userid__row").hide();
+  });
+
   // initializing datatable
   $(document).ready( function () {
     var opciones = {
@@ -67,6 +102,7 @@
                 null,
                 null,
                 null,
+                { "orderable": false },
                 { "orderable": false }
             ]
         };
