--- a/views/transcriptions/view.html
+++ b/views/transcriptions/view.html
@@ -174,33 +174,19 @@
       {{pass}}
 
       <br>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="transcription-tag ">
-            <b id="objetivos-simples">Ver Objetivos Simples <i id="check-objetivos-simples" class="fa fa-check-square-o"></i></b>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="transcription-tag">
-            <b  id="objetivos-especificos">Ver Objetivos Generales/Especificos <i id="check-objetivos-especificos" class="fa fa-square-o"></i></b>
-          </div>
-        </div>
-      </div>
 
       <div class="field-tag-wide">
-        <b><span id="nombre-objetivos-tag"></span></b>
+        <b>Objetivos Generales</b>
         {{=transcription_form.custom.widget.objetivos_generales}}
       </div>
 
-      <div id="objetivos-especificos-wrapper">
-        <div class="field-tag-wide">
-          <b>Objetivos Específicos</b>
-          {{=transcription_form.custom.widget.objetivos_especificos}}
-        </div>
+      <div class="field-tag-wide">
+        <b>Objetivos Específicos</b>
+        {{=transcription_form.custom.widget.objetivos_especificos}}
       </div>
 
       <div class="field-tag-wide">
-        <b>Contenidos Sinopticós</b>
+        <b>Contenidos Sinópticos</b>
         {{=transcription_form.custom.widget.sinopticos}}
       </div>
 
