--- a/views/programs/list.html
+++ b/views/programs/list.html
@@ -1,9 +1,67 @@
 {{left_sidebar_enabled,right_sidebar_enabled=False,('message' in globals())}}
 {{extend 'layout.html'}}
 
-
 {{if 'message' in globals():}}
-  <h2>{{=message}}</h2>
+  <h2> {{=message}}</h2>
 {{pass}}
 
-<h2> Listar los Programas por Departamento....</h2>
+{{if 'error' in globals():}}
+  <p>No se pudo conectar con el servicio de consultas. <br>
+     Inténte de nuevo más tarde. Si el error persiste póngase en contacto con la Dirección de
+     Admisión y Control de Estudios (DACE).
+  </p>
+{{else:}}
+  <div class="table-responsive">
+   <table id="list-transcriptions" class="table table-striped">
+     <thead>
+       <tr>
+         <th>Nombre</th>
+       </tr>
+     </thead>
+     <tbody>
+       {{for dep in departments:}}
+         <tr>
+           <td><a href="{{=URL(c='queries', f='departmentsubjects', args = [dep['siglas_depto']])}}">{{=dep['nombre']}}</a></td>
+         </tr>
+        {{pass}}
+     </tbody>
+   </table>
+   </div>
+  </div>
+
+  <script type="text/javascript">
+    // initializing datatable
+    $(document).ready( function () {
+      var opciones = {
+            responsive: true,
+              "language": {
+                  search:         "Buscar: ",
+                  searchPlaceholder: "Nombre Departamento...",
+                  lengthMenu:     "Mostrar _MENU_ entradas.",
+                  info:           "Mostrando _START_ a _END_ de _TOTAL_ entradas.",
+                  infoEmpty:      "",
+                  infoFiltered:   "",
+                  infoPostFix:    "",
+                  loadingRecords: "Cargando datos...",
+                  zeroRecords:    "No se encontraron Departamentos que correspondan a la búsqueda.",
+                  emptyTable:     "No hay información disponible.",
+                  processing:     "Procesando...",
+                  paginate: {
+                      first:      "Primero",
+                      previous:   "Anterior",
+                      next:       "Siguiente",
+                      last:       "Último"
+                  },
+                  aria: {
+                      sortAscending:  ": Se ordenan las columnas por orden creciente.",
+                      sortDescending: ": Se ordenan las columnas por orden decreciente."
+                  }
+              },
+               "columns": [
+                  null,
+              ]
+          };
+        $('#list-transcriptions').DataTable(opciones);
+    } );
+  </script>
+{{pass}}
