--- a/views/transcriptions/approval_view.html
+++ b/views/transcriptions/approval_view.html
@@ -645,6 +645,16 @@ $('#modalEliminarCampo').on('show.bs.modal', function(e){
     startDate: min_date,
     endDate: max_date
   });
+  
+  $('#TRANSCRIPCION_anio_hasta').datepicker({
+    minViewMode: 2,
+    maxViewMode: 2,
+    format: 'yyyy',
+    autoclose: true,
+    language: 'es',
+    startDate: min_date,
+    endDate: max_date
+  });
 
   $('#TRANSCRIPCION_fecha_elaboracion').removeClass("date");
   $('#TRANSCRIPCION_fecha_elaboracion').datepicker({
