--- a/views/transcriptions/edit.html
+++ b/views/transcriptions/edit.html
@@ -554,6 +554,16 @@ $('#modalEliminarCampo').on('show.bs.modal', function(e){
     endDate: max_date
   });
 
+  $('#TRANSCRIPCION_anio_hasta').datepicker({
+    minViewMode: 2,
+    maxViewMode: 2,
+    format: 'yyyy',
+    autoclose: true,
+    language: 'es',
+    startDate: min_date,
+    endDate: max_date
+  });
+
   $('#TRANSCRIPCION_fecha_elaboracion').removeClass("date");
   $('#TRANSCRIPCION_fecha_elaboracion').datepicker({
     minViewMode: 0,
